objects/Gamma__c.object
<CustomObject>
    <fields>
        <fullName>A__c</fullName>
        <label>A</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B__c</fullName>
        <label>B</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EId__c</fullName>
        <description>External Id</description>
        <externalId>true</externalId>
        <label>EId</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Gamma</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Gama Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gammas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>